# gd32-pio-projects

./: README.md  clean_all_projects.bat  compile_all_projects.bat
.github/workflows/: examples.yml
gd32-arduino-analog-read/: platformio.ini
gd32-arduino-analog-read/src/: main.cpp
gd32-arduino-blinky/: platformio.ini
gd32-arduino-blinky/src/: main.cpp
gd32-arduino-button-isr-oled/: platformio.ini
gd32-arduino-button-isr-oled/src/: main.cpp
gd32-arduino-dhrystone/: platformio.ini
gd32-arduino-dhrystone/src/: dhry.h  main.cpp
gd32-arduino-dht11-temp-oled/: platformio.ini
gd32-arduino-dht11-temp-oled/src/: main.cpp
gd32-arduino-duinocoin-miner - Kopie/: platformio.ini
gd32-arduino-duinocoin-miner - Kopie/src/: config.h  main.cpp  uniqueID.cpp  uniqueID.h
gd32-arduino-eeprom/: platformio.ini
gd32-arduino-i2c-oled/: platformio.ini
gd32-arduino-i2c-oled/src/: main.cpp
gd32-arduino-i2c-scanner/src/: main.cpp
gd32-arduino-interrupt/src/: main.cpp
gd32-arduino-pwm-out/: platformio.ini
gd32-arduino-pwm-out/src/: main.cpp
gd32-arduino-rtc/: platformio.ini
gd32-arduino-rtc/src/: main.cpp
gd32-arduino-serials/: README.md
gd32-arduino-serials/src/: main.cpp
gd32-baremetal/: platformio.ini
gd32-baremetal/src/: GD32F303CC.ld  gd32f30x.h  gd32f30x_libopt.h  gd32f30x_rcu.h  how_to_gen_startup_script.txt  main.c  startup_gd32f30x_hd.S
gd32-mbedos-baremetal-blinky/: platformio.ini
gd32-mbedos-baremetal-custom-target-blinky/: custom_targets.json  mbed_app.json
gd32-mbedos-baremetal-custom-target-blinky/src/: main.cpp
gd32-mbedos-baremetal-custom-target-usb/: custom_targets.json  mbed_app.json  platformio.ini
gd32-mbedos-baremetal-custom-target-usb/src/: main.cpp
gd32-mbedos-rtos-blinky/: mbed_app.json  platformio.ini
gd32-mbedos-rtos-blinky/src/: main.cpp
gd32-mbedos-rtos-custom-target-blinky/: mbed_app.json
gd32-spl-adc-core-temp-gd32f30x/: platformio.ini
gd32-spl-adc-core-temp-gd32f30x/src/: main.c
gd32-spl-adc-polling/: platformio.ini
gd32-spl-adc-polling-gd32f1x0/: platformio.ini
gd32-spl-adc-polling-gd32f30x/: platformio.ini
gd32-spl-blinky/: platformio.ini
gd32-spl-blinky-eval/: platformio.ini
gd32-spl-blinky-gd32f30x/: platformio.ini
gd32-spl-blinky-refactor/: platformio.ini
gd32-spl-blinky-with-c++/: platformio.ini
gd32-spl-bootloader/: README.md  platformio.ini
gd32-spl-ccram/: README.md  platformio.ini
gd32-spl-cmsis-dsp/: README.md  output.map  platformio.ini
gd32-spl-cmsis-dsp-optimized/: README.md  output.map  platformio.ini
gd32-spl-freertos/: README.md  platformio.ini
gd32-spl-freertos-as-cmsisos2/: README.md  platformio.ini
gd32-spl-semihosting-printf/: README.md  platformio.ini
gd32-spl-timer/: platformio.ini
gd32-spl-usart/: README.md  platformio.ini
gd32-spl-usb-cdc-gd32e10x/: platformio.ini
gd32-spl-usb-cdc-gd32f30x/: platformio.ini
gd32-spl-usb-cdc-gd32f3x0/: platformio.ini
gd32-spl-usb-cdc-gd32l23x/: platformio.ini
gd32-spl-usb-cdc-try-2/: platformio.ini
gd32-spl-usb-device-keyboard-gd32f3x0/: platformio.ini
gd32-spl-usb-device-keyboard-using-lib-gd32f3x0/: platformio.ini
gd32-spl-usb-device-printer-using-lib-gd32f3x0/: platformio.ini
gd32-spl-usb-hid-keyboard-gd32f30x/: platformio.ini  readme.txt
gd32-spl-usb-host-hid-gd323x0/: README.md  platformio.ini
gd32-spl-usb-host-keyboard-gd32350r-eval/: README.md  platformio.ini
gd32-spl-usb-host-keyboard-gd323x0/: README.md  platformio.ini
gd32-spl-w51x-wifi/: platformio.ini  wifi.ld
gd32-spl-w51x-wifi/lib/FreeRTOSv10.3.1/: CMakeLists.txt
gd32-spl-w51x-wifi/lib/FreeRTOSv10.3.1/CMSIS/RTOS2/FreeRTOS/Examples/Blinky/Flash/: Blinky.sct
gd32-spl-w51x-wifi/lib/FreeRTOSv10.3.1/include/: freertos_os2.h  portmacro.h  task.h  tickless_sleep.h
gd32-spl-w51x-wifi/lib/FreeRTOSv10.3.1/src/: clib_arm.c  cmsis_os2.c  os_systick.c  tasks.c
gd32-spl-w51x-wifi/lib/FreeRTOSv10.3.1/src/portable/Common/: tickless_sleep.c
gd32-spl-w51x-wifi/lib/FreeRTOSv10.3.1/src/portable/GCC/ARM_CM33_NTZ/non_secure/: port.c  portasm1.S
gd32-spl-w51x-wifi/lib/GD32W51x_wifi_driver/: CMakeLists.txt
gd32-spl-w51x-wifi/lib/GD32W51x_wifi_driver/include/: net_intf.h  osal_types.h  soc_intf.h  wlan_80211.h  wlan_cfg.h  wlan_debug.h  wlan_endian.h  wlan_intf.h  wlan_intf_def.h
gd32-spl-w51x-wifi/lib/bsp/: CMakeLists.txt  bsp_gd32w51x.c.in  bsp_inc.h  bsp_wlan.c  bsp_wlan.h  dma.c  dma.h  flash_api.c  flash_api.h  gd32_it.c  gd32_it.h  gd32w51x_libopt.h  init_rom.c  init_rom.h  rf_efuse.c  rf_efuse.h  trng.c  trng.h  uart.c  uart.h
gd32-spl-w51x-wifi/lib/common/: CMakeLists.txt  _build_date.h  _wifi_version.h  cJSON.c  cJSON.h  debug_print.c  debug_print.h  delay.c  delay.h  dlist.c  dlist.h  malloc.c  malloc.h  wakelock.c  wakelock.h  wifi_version.h  wrapper_os.c  wrapper_os.h
gd32-spl-w51x-wifi/lib/lwip-2.1.2/: CMakeLists.txt
gd32-spl-w51x-wifi/lib/lwip-2.1.2/apps/ping/: ping.c  ping.h
gd32-spl-w51x-wifi/lib/lwip-2.1.2/include/: common_subr.h  dhcpd.h  dhcpd_conf.h  ethernetif.h  leases.h  lwip_cfg.h  lwipopts.h  wifi_netif.h
gd32-spl-w51x-wifi/lib/lwip-2.1.2/include/arch/: cc.h  sys_arch.h
gd32-spl-w51x-wifi/lib/lwip-2.1.2/include/lwip/: debug.h  dhcp.h  igmp.h  sys.h
gd32-spl-w51x-wifi/lib/lwip-2.1.2/src/api/: api_lib.c  api_msg.c  sockets.c
gd32-spl-w51x-wifi/lib/lwip-2.1.2/src/core/: netif.c  pbuf.c  udp.c
gd32-spl-w51x-wifi/lib/lwip-2.1.2/src/core/ipv4/: dhcp.c  ip4_frag.c
gd32-spl-w51x-wifi/lib/lwip-2.1.2/src/port/: dhcpd.c  ethernetif.c  sys_arch.c  wifi_netif.c
gd32-spl-w51x-wifi/lib/mbl_source_ns/: CMakeLists.txt  mbl_api.c  mbl_api.h  mbl_flash.c.in  mbl_flash.h  mbl_image.c  mbl_image.h  mbl_ns.c  mbl_qspi_flash.c.in  mbl_qspi_flash.h  mbl_sys.c  mbl_sys.h  mbl_trace.h  mbl_uart.c.in  mbl_uart.h
gd32-spl-w51x-wifi/lib/wifi/: CMakeLists.txt  state_machine.h  wifi_eloop.c  wifi_eloop.h  wifi_management.c  wifi_management.h  wifi_netlink.c  wifi_netlink.h
gd32-w51x-wifi-demo/: README.md  platformio.ini
gd32-w51x-wifi-scan/: platformio.ini
scripts/: clean_all_projects.bat  compile_all_projects.bat
(+293 files in other folders)
